Add test for passing parameters to sub dependencies while using the ninject.Factory extension
Converted to unit tests.

--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Ninject.Extensions.Factory">
       <HintPath>..\packages\Ninject.Extensions.Factory.3.2.1.0\lib\net45-full\Ninject.Extensions.Factory.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,6 +55,9 @@
   <ItemGroup>
     <Compile Include="Bar.cs" />
     <Compile Include="Dependency.cs" />
+    <Compile Include="Factories\Bar.cs" />
+    <Compile Include="Factories\FactoryTests.cs" />
+    <Compile Include="Factories\Foo.cs" />
     <Compile Include="Foo.cs" />
     <Compile Include="IDependency.cs" />
     <Compile Include="IMyServiceFactory.cs" />
@@ -64,6 +70,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
