--- a/ConsoleApps/FunWithSpikes/FunWithNinject/packages.config
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/packages.config
@@ -4,4 +4,5 @@
   <package id="Castle.Core" version="3.2.0" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Factory" version="3.2.1.0" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
 </packages>
