I thought i was going to fiddle.

--- a/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,11 +47,13 @@
     <Compile Include="Disposable.cs" />
     <Compile Include="Foo.cs" />
     <Compile Include="IHaveValue.cs" />
+    <Compile Include="LinqTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
