More gitignores for SmartGit

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ packages/*
 /**/packages
 # The above line doesn't work in SmartGit, so explicitly ignore the top level packages directory
 /packages/*
+ConsoleApps/FunWithSpikes/packages
 ## TODO: If the tool you use requires repositories.config uncomment the next line
 #!packages/repositories.config
 
