--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,11 @@
 version: 1.0.{build}
+configuration: Release
+assembly_info:
+  patch: true
+  file: '**\AssemblyInfo.*'
+  assembly_version: '{version}'
+  assembly_file_version: '{version}'
+  assembly_informational_version: '{version}'
 build:
   project: ConsoleApps\FunWithSpikes\FunWithSpikes.sln
   verbosity: minimal
