Add package restore.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,8 @@ assembly_info:
   assembly_version: '{version}'
   assembly_file_version: '{version}'
   assembly_informational_version: '{version}'
+before_build:
+- nuget restore ConsoleApps\FunWithSpikes\FunWithSpikes.sln
 build:
   project: ConsoleApps\FunWithSpikes\FunWithSpikes.sln
   verbosity: minimal
