--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,39 +1,47 @@
 # Great reference:  http://www.appveyor.com/docs/appveyor-yml
 
-version: 1.0.{build}
-skip_tags: true
-configuration: Release
-assembly_info:
-  patch: true
-  file: '**\AssemblyInfo.*'
-  assembly_version: '{version}'
-  assembly_file_version: '{version}'
-  assembly_informational_version: '{version}'
-nuget:
-  account_feed: true
-  project_feed: true
-before_build:
-- nuget restore ConsoleApps\FunWithSpikes\FunWithSpikes.sln
-build:
-  project: ConsoleApps\FunWithSpikes\FunWithSpikes.sln
-  publish_nuget: true
-  publish_nuget_symbols: true
-  verbosity: minimal
-artifacts:
-- path: '\ConsoleApps\FunWithSpikes\FunWithSpikes\bin'
-  name: Artifact1
-- path: '\ConsoleApps\FunWithSpikes\FunWithNuget\bin\'
-deploy:
-- provider: GitHub
-  tag: AppVeyor-v$(appveyor_build_version)
-  auth_token:
-    secure: lgX4GxJWzuYLXkho9D//SrnbrvVAhjBP/3X/Jmcg6pXZtToG7E1GwBr7vXGSqNAu
-  artifact: 
+- provider: Environment
+  name: production
   on:
     branch: master
-- provider: NuGet
-  api_key:
-    secure: 1kBNjaCsKUKkhgEIMDY4BcaDQrhwrMdWFlyWW2gr7yY/d3O9OmStZFdDOUY61pFo
-  artifact: 
-  on:
-    branch: master
+    appveyor_repo_tag: true
+
+  version: 1.0.{build}
+  configuration: Release
+  assembly_info:
+    patch: true
+    file: '**\AssemblyInfo.*'
+    assembly_version: '{version}'
+    assembly_file_version: '{version}'
+    assembly_informational_version: '{version}'
+  nuget:
+    account_feed: true
+    project_feed: true
+  before_build:
+  - nuget restore ConsoleApps\FunWithSpikes\FunWithSpikes.sln
+  build:
+    project: ConsoleApps\FunWithSpikes\FunWithSpikes.sln
+    publish_nuget: true
+    publish_nuget_symbols: true
+    verbosity: minimal
+  artifacts:
+  - path: '\ConsoleApps\FunWithSpikes\FunWithSpikes\bin'
+    name: FunWithSpikes
+  - path: '\ConsoleApps\FunWithSpikes\FunWithNinject\bin\$(configuration)'
+    name: FunWithNinject
+  deploy:
+  - provider: GitHub
+    tag: $(APPVEYOR_REPO_TAG_NAME)
+    auth_token:
+      secure: lgX4GxJWzuYLXkho9D//SrnbrvVAhjBP/3X/Jmcg6pXZtToG7E1GwBr7vXGSqNAu
+    artifact: 
+    on:
+      branch: master
+# - provider: NuGet
+#   api_key:
+#     secure: 1kBNjaCsKUKkhgEIMDY4BcaDQrhwrMdWFlyWW2gr7yY/d3O9OmStZFdDOUY61pFo
+#   artifact: 
+#   on:
+#     branch: master
+-
+
