Remove "do not build tags" option.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,7 @@
 # Great reference:  http://www.appveyor.com/docs/appveyor-yml
 
 version: 1.0.{build}
-skip_tags: true
+skip_tags: false
 configuration: Release
 assembly_info:
   patch: true
