Fixed version regex

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ skip_tags: false
 configuration: Release
 init:
 - ps: >-
-    $parsedReleaseBuildVersion = $env:APPVEYOR_REPO_TAG_NAME -Match "(\d+.\d+.\d+(.[\d+])?)"
+    $parsedReleaseBuildVersion = $env:APPVEYOR_REPO_TAG_NAME -Match "(\d+.\d+.\d+(.\d+)?)"
     
     If($env:appveyor_repo_tag -AND $parsedReleaseBuildVersion) {
       $env:BuildVersion = $matches[0]
