--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,6 +44,7 @@ deploy:
   auth_token:
     secure: lgX4GxJWzuYLXkho9D//SrnbrvVAhjBP/3X/Jmcg6pXZtToG7E1GwBr7vXGSqNAu
   artifact: ConsoleApps\FunWithSpikes\FunWithSpikes\Artifact1.zip
+  prerelease: false
   on:
     branch: master
     IsGithubRelease: true
