Adding an AnyCPU dll for the exes to depend on.

--- a/Any64Cpu/64bitExe/64bitExe.csproj
+++ b/Any64Cpu/64bitExe/64bitExe.csproj
@@ -68,6 +68,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AnyCpuDll\AnyCpuDll.csproj">
+      <Project>{e6fa39cb-0595-48c4-ba3f-55d2ea063bbf}</Project>
+      <Name>AnyCpuDll</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
