--- a/Any64Cpu/AnyCpuDll/AnyCpuDll.csproj
+++ b/Any64Cpu/AnyCpuDll/AnyCpuDll.csproj
@@ -39,7 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SomeClass.cs" />
+    <Compile Include="AnyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
