Add a reference from AnyCpuDll to the x64 dll.  It only blows up when accessing the 64bit dll from the x86 EXE.
Accessing from the x86 EXE everything works fine and dandy.

--- a/Any64Cpu/AnyCpuDll/AnyCpuDll.csproj
+++ b/Any64Cpu/AnyCpuDll/AnyCpuDll.csproj
@@ -42,6 +42,12 @@
     <Compile Include="AnyClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\64BitDll\64BitDll.csproj">
+      <Project>{835f3604-7833-45b8-8680-d1076052174f}</Project>
+      <Name>64BitDll</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
