--- a/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
@@ -52,6 +52,7 @@
     <Compile Include="LinqTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeeSharp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
