--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,6 +17,8 @@ init:
     }
     
     Write-Host "Build Version: " $env:BuildVersion
+      Write-Host "Full commit:  " $env:appveyor_repo_tag
+
     
     Write-Host "appveyor_build_version Variable: " $env:appveyor_build_version
 assembly_info:
@@ -50,7 +52,7 @@ deploy:
     IsGithubRelease: true
 - provider: NuGet
   api_key:
-    secure: 1kBNjaCsKUKkhgEIMDY4BcaDQrhwrMdWFlyWW2gr7yY/d3O9OmStZFdDOUY61pFo
+    secure: 1kBNjaCsKUKkhgEIMDY4BcaDQrhwrMdWFlyWW2gr7yY/d3O9OmStZFdDOUY61pFoBAD_VALUE
   artifact: 
   on:
     branch: master
