--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ModulesModulesModules\Module1.cs" />
     <Compile Include="ModulesModulesModules\Module2.cs" />
     <Compile Include="ModulesModulesModules\Tests.cs" />
+    <Compile Include="OpenGenerics\OpenGenericsTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WhenInjected\BingChildService.cs" />
