--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -61,6 +61,7 @@
     <Compile Include="FooBars.cs" />
     <Compile Include="Initialization\IInitializable.cs" />
     <Compile Include="Initialization\Tests.cs" />
+    <Compile Include="InjectionTests.cs" />
     <Compile Include="ModulesModulesModules\Module1.cs" />
     <Compile Include="ModulesModulesModules\Module2.cs" />
     <Compile Include="ModulesModulesModules\Tests.cs" />
