Play with SecureString

--- a/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectionTests.cs" />
+    <Compile Include="SecureStringTests.cs" />
     <Compile Include="SeeSharp.cs" />
   </ItemGroup>
   <ItemGroup>
