--- a/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ReflectionTests.cs" />
     <Compile Include="SecureStringTests.cs" />
     <Compile Include="SeeSharp.cs" />
+    <Compile Include="StringTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
