Fixing file names

--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -90,8 +90,8 @@
     <Compile Include="Provider\IndirectDependencyOnFoo1.cs" />
     <Compile Include="Provider\IntermediateDependency.cs" />
     <Compile Include="Provider\MoreIndirectDependencyOnFoo1.cs" />
+    <Compile Include="Provider\ProviderTests.cs" />
     <Compile Include="Provider\NamedFooProvider.cs" />
-    <Compile Include="Provider\NamedFooProvider_2.cs" />
     <Compile Include="WhenInjected\BingChildService.cs" />
     <Compile Include="WhenInjected\BingService.cs" />
     <Compile Include="WhenInjected\BingUtility.cs" />
