--- a/NuGetSpecial/ConsoleApplication/ConsoleApplication.csproj
+++ b/NuGetSpecial/ConsoleApplication/ConsoleApplication.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>ConsoleApplication</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
