--- a/NuGetSpecial/Intermediary/Intermediary.csproj
+++ b/NuGetSpecial/Intermediary/Intermediary.csproj
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Package, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\NuGetSpecial.1.0.0.8\lib\net40\Package.dll</HintPath>
+      <HintPath>..\packages\NuGetSpecial.1.0.0.14\lib\net40\Package.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -49,15 +49,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\NuGetSpecial.1.0.0.8\build\NuGetSpecial.targets" Condition="Exists('..\packages\NuGetSpecial.1.0.0.8\build\NuGetSpecial.targets')" />
+  <Import Project="..\packages\NuGetSpecial.1.0.0.14\build\NuGetSpecial.targets" Condition="Exists('..\packages\NuGetSpecial.1.0.0.14\build\NuGetSpecial.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\NuGetSpecial.1.0.0.8\build\NuGetSpecial.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NuGetSpecial.1.0.0.8\build\NuGetSpecial.targets'))" />
+    <Error Condition="!Exists('..\packages\NuGetSpecial.1.0.0.14\build\NuGetSpecial.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\NuGetSpecial.1.0.0.14\build\NuGetSpecial.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
