--- a/ConsoleApps/FunWithSQLite/FunWithSQLite/packages.config
+++ b/ConsoleApps/FunWithSQLite/FunWithSQLite/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0" targetFramework="net40" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="MasterDevs.Core" version="1.0.0.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.99.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.99.0" targetFramework="net40" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.99.0" targetFramework="net40" requireReinstallation="true" />
 </packages>
