--- a/ConsoleApps/FunWithSQLite/FunWithSQLite/FunWithSQLite.csproj
+++ b/ConsoleApps/FunWithSQLite/FunWithSQLite/FunWithSQLite.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlData.cs" />
     <Compile Include="SqliteUri.cs" />
+    <Compile Include="Workers\BackupWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
