--- a/ConsoleApps/FunWithSQLite/FunWithSQLite/FunWithSQLite.csproj
+++ b/ConsoleApps/FunWithSQLite/FunWithSQLite/FunWithSQLite.csproj
@@ -37,6 +37,10 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net40\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -72,11 +76,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConnectionStringBuilder.cs" />
+    <Compile Include="Db\Database.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlData.cs" />
     <Compile Include="SqliteUri.cs" />
     <Compile Include="Workers\BackupWorker.cs" />
+    <Compile Include="Workers\PerfWorker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
