--- a/ConsoleApps/FunWithSQLite/FunWithSQLite/packages.config
+++ b/ConsoleApps/FunWithSQLite/FunWithSQLite/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineParser" version="1.9.71" targetFramework="net461" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net40" requireReinstallation="true" />
   <package id="MasterDevs.Core" version="1.0.0.0" targetFramework="net461" />
   <package id="System.Data.SQLite" version="1.0.99.0" targetFramework="net40" />
