--- a/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithNinject/FunWithNinject.csproj
@@ -61,6 +61,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConflictingScopes\Implementations.cs" />
+    <Compile Include="ConflictingScopes\Tests.cs" />
     <Compile Include="CtorChoosing\MyObj.cs" />
     <Compile Include="CtorChoosing\Tests.cs" />
     <Compile Include="Factories\Bar.cs" />
@@ -114,6 +116,7 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
