--- a/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithSpikes/FunWithSpikes.csproj
@@ -66,6 +66,7 @@
     <Compile Include="SecureStringTests.cs" />
     <Compile Include="SeeSharp.cs" />
     <Compile Include="StringTests.cs" />
+    <Compile Include="VirtualFun.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
