--- a/ConsoleApps/FunWithSpikes/FunWithCommandLine/FunWithCommandLine.csproj
+++ b/ConsoleApps/FunWithSpikes/FunWithCommandLine/FunWithCommandLine.csproj
@@ -48,9 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OptionsHelpers.cs" />
     <Compile Include="OptionsWithDefaultEnum.cs" />
     <Compile Include="OptionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SubclassedOptions\ParentOptions.cs" />
+    <Compile Include="SubclassedOptions\SubclassedOptionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
